# cymulate-framework

./: .gitignore  README.md  client_start.bat  main.py  pyproject.toml
core/: __init__.py
core/assets/: templates_public.json
core/cleanup/: linux.py  windows.py
core/dependency/linux/: installer.py  utils.py
core/dependeny/windows/: utils.py
core/model/: execution.py  tactic.py
core/module/: base.py  windows.py
core/module/base/: BaseModule.py
core/module/windows/: D.py  DownloadAndExecutePhishingAttachment.py  __init__.py
core/module/windows/dependency/: checker.py  installer.py
core/template/: apt34.py
core/utils/: api.py  common.py  log.py
tests/: test_dependencies_checker.py  test_dependencies_exec.py  test_powershell_output.py
